@@ -1,3 +1,4 @@
+org.gradle.java.home=/opt/homebrew/opt/openjdk@17
 org.gradle.jvmargs=-Xmx4G -XX:MaxMetaspaceSize=2G -XX:+HeapDumpOnOutOfMemoryError
 android.useAndroidX=true
 android.enableJetifier=true
