@@ -19,7 +19,9 @@ void showPatientDialog(BuildContext context) {
         'Ingresar Paciente',
         style: TextStyle(color: CustomTheme.lettersColor, fontSize: 28),
       ),
-      content: Container(
+      
+      content: SizedBox(
+        
         width: MediaQuery.of(context).size.width * 0.8,
         height: MediaQuery.of(context).size.height * 0.6,
         child: SingleChildScrollView(
